--- a/Trillo/starter/sass/_base.scss
+++ b/Trillo/starter/sass/_base.scss
@@ -15,6 +15,7 @@ Grey dark 2: #777
 Grey dark 3: #999
 
 */
+
 :root {
   --color-primary: #eb2f64;
   --color-primary-light: #FF3366;
@@ -23,22 +24,27 @@ Grey dark 3: #999
   --color-grey-ligh-2: #f4f2f2;
   --color-grey-ligh-3: #f0eeee;
   --color-grey-ligh-4: #ccc;
+
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999; }
+  --color-grey-dark-3: #999;
+}
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5% //1rem = 10px
+}
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -48,4 +54,5 @@ body {
   background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh; }
+  min-height: 100vh;
+}
